Project

General

Profile

Actions

Bug #26961

closed

mds: fix instances of wrongly sending client messages outside of MDSRank::send*

Added by Patrick Donnelly over 5 years ago. Updated over 5 years ago.

Status:
Resolved
Priority:
Urgent
Category:
Correctness/Safety
Target version:
% Done:

0%

Source:
Development
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS
Labels (FS):
task(easy)
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

pdonnell@icewind ~/ceph/src/mds$ git grep 'get_connection()->send_message'
MDCache.cc:  m->get_connection()->send_message2(reply); /* FIXME, why
not send_client? */
MDCache.cc:  m->get_connection()->send_message2(r);
MDSDaemon.cc:  m->get_connection()->send_message2(reply);
MDSRank.cc:
imported_session->get_connection()->send_message2(std::move(session->preopen_out_queue.front()));
MDSRank.cc:    session->get_connection()->send_message2(m);
MDSRank.cc:    session->get_connection()->send_message2(m);
MDSRank.cc:    session->get_connection()->send_message2(std::move(m));
Server.cc:
m->get_connection()->send_message2(MClientSession::create(CEPH_SESSION_RENEWCAPS,
m->get_seq()));
Server.cc:    session->get_connection()->send_message2(reply);
Server.cc:
session->get_connection()->send_message2(MClientSession::create(CEPH_SESSION_FORCE_RO));
Server.cc:    m->get_connection()->send_message2(MClientSession::create(CEPH_SESSION_CLOSE));
Server.cc:  m->get_connection()->send_message2(reply);
Server.cc:  req->get_connection()->send_message2(reply);
Server.cc:    req->get_connection()->send_message2(reply);
Server.cc:      req->get_connection()->send_message2(reply);

Related issues 2 (0 open2 closed)

Copied to CephFS - Backport #36147: luminous: mds: fix instances of wrongly sending client messages outside of MDSRank::send*RejectedPatrick DonnellyActions
Copied to CephFS - Backport #36148: mimic: mds: fix instances of wrongly sending client messages outside of MDSRank::send*RejectedPatrick DonnellyActions
Actions #1

Updated by Patrick Donnelly over 5 years ago

  • Status changed from New to Fix Under Review
Actions #2

Updated by Patrick Donnelly over 5 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #36147: luminous: mds: fix instances of wrongly sending client messages outside of MDSRank::send* added
Actions #4

Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #36148: mimic: mds: fix instances of wrongly sending client messages outside of MDSRank::send* added
Actions #5

Updated by Patrick Donnelly over 5 years ago

  • Status changed from Pending Backport to Resolved
  • Backport deleted (mimic,luminous)
Actions

Also available in: Atom PDF